cluster/apps/default/zigbee2mqtt/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: default
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
      app.kubernetes.io/instance: zigbee2mqtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
        app.kubernetes.io/instance: zigbee2mqtt
    spec:
      nodeSelector:
        topology.kubernetes.io/region: lab
      tolerations:
        - key: "arch"
          operator: "Equal"
          value: "arm64"
          effect: "NoSchedule"
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.14.2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            failureThreshold: 30
          resources:
            requests:
              cpu: 50m
              memory: 64M
          securityContext: {}
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data-ceph
